--- a/infra/controllers/cilium/cilium-values.yaml
+++ b/infra/controllers/cilium/cilium-values.yaml
@@ -14,8 +14,9 @@ hubble:
     enabled:
       - http
       - tcp
-      - udp
       - flow
+      - drop
+      - icmp
   relay:
     enabled:
       true
