--- a/infra/controllers/cilium/cilium-values.yaml
+++ b/infra/controllers/cilium/cilium-values.yaml
@@ -23,6 +23,8 @@ hubble:
   ui:
     enabled: true
     service:
+      annotations:
+        io.cilium/lb-ipam-ips: 192.168.1.212
       type: LoadBalancer
 
 kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
