--- a/infra/configs/kube-system/cilium/network-policy.yaml
+++ b/infra/configs/kube-system/cilium/network-policy.yaml
@@ -11,22 +11,26 @@ spec:
   ingress:
     - toPorts:
         - ports:
-            - port: "0"
+            - port: "80"
               protocol: TCP
-            - port: "0"
-              protocol: UDP
+            - port: "9000"
+              protocol: TCP
+            - port: "443"
+              protocol: TCP
           rules:
             http:
-#              - method: GET
+              - method: GET
               - method: POST
   egress:
     - toPorts:
         - ports:
-            - port: "0"
+            - port: "80"
               protocol: TCP
-            - port: "0"
-              protocol: UDP
+            - port: "9000"
+              protocol: TCP
+            - port: "443"
+              protocol: TCP
           rules:
             http:
-#              - method: GET
+              - method: GET
               - method: POST
