--- a/infra/configs/kube-system/cilium/network-policy.yaml
+++ b/infra/configs/kube-system/cilium/network-policy.yaml
@@ -17,6 +17,8 @@ spec:
               protocol: TCP
             - port: "443"
               protocol: TCP
+            - port: "6379"
+              protocol: TCP
           rules:
             http:
               - method: GET
@@ -29,6 +31,8 @@ spec:
             - port: "9000"
               protocol: TCP
             - port: "443"
+              protocol: TCP
+            - port: "6379"
               protocol: TCP
           rules:
             http:
