--- a/infra/configs/kube-system/cilium/network-policy.yaml
+++ b/infra/configs/kube-system/cilium/network-policy.yaml
@@ -19,6 +19,8 @@ spec:
               protocol: TCP
             - port: "6379"
               protocol: TCP
+            - port: "5432"
+              protocol: TCP
           rules:
             http:
               - method: GET
@@ -33,6 +35,8 @@ spec:
             - port: "443"
               protocol: TCP
             - port: "6379"
+              protocol: TCP
+            - port: "5432"
               protocol: TCP
           rules:
             http:
