--- a/infra/configs/kube-system/cilium/network-policy.yaml
+++ b/infra/configs/kube-system/cilium/network-policy.yaml
@@ -21,10 +21,10 @@ spec:
               protocol: TCP
             - port: "5432"
               protocol: TCP
-          rules:
-            http:
-              - method: GET
-              - method: POST
+#          rules:
+#            http:
+#              - method: GET
+#              - method: POST
   egress:
     - toPorts:
         - ports:
@@ -38,7 +38,7 @@ spec:
               protocol: TCP
             - port: "5432"
               protocol: TCP
-          rules:
-            http:
-              - method: GET
-              - method: POST
+#          rules:
+#            http:
+#              - method: GET
+#              - method: POST
