--- a/infra/configs/kube-system/cilium/network-policy.yaml
+++ b/infra/configs/kube-system/cilium/network-policy.yaml
@@ -13,14 +13,14 @@ spec:
         - ports:
             - port: "80"
               protocol: TCP
-            - port: "9000"
-              protocol: TCP
-            - port: "443"
-              protocol: TCP
-            - port: "6379"
-              protocol: TCP
-            - port: "5432"
-              protocol: TCP
+#            - port: "9000"
+#              protocol: TCP
+#            - port: "443"
+#              protocol: TCP
+#            - port: "6379"
+#              protocol: TCP
+#            - port: "5432"
+#              protocol: TCP
 #          rules:
 #            http:
 #              - method: GET
@@ -30,14 +30,14 @@ spec:
         - ports:
             - port: "80"
               protocol: TCP
-            - port: "9000"
-              protocol: TCP
-            - port: "443"
-              protocol: TCP
-            - port: "6379"
-              protocol: TCP
-            - port: "5432"
-              protocol: TCP
+#            - port: "9000"
+#              protocol: TCP
+#            - port: "443"
+#              protocol: TCP
+#            - port: "6379"
+#              protocol: TCP
+#            - port: "5432"
+#              protocol: TCP
 #          rules:
 #            http:
 #              - method: GET
