--- a/infra/configs/kube-system/cilium/network-policy.yaml
+++ b/infra/configs/kube-system/cilium/network-policy.yaml
@@ -1,5 +1,5 @@
-apiVersion: "cilium.io/v2"
-kind: CiliumNetworkPolicy
+#apiVersion: "cilium.io/v2"
+#kind: CiliumNetworkPolicy
 metadata:
   name: allow-all-traffic
   namespace: authentik
