--- a/infra/configs/kube-system/cilium/network-policy.yaml
+++ b/infra/configs/kube-system/cilium/network-policy.yaml
@@ -11,14 +11,14 @@ spec:
   ingress:
     - toPorts:
         - ports:
-            - port: "80"
-              protocol: TCP
-            - port: "9000"
-              protocol: TCP
+#            - port: "80"
+#              protocol: TCP
+#            - port: "9000"
+#              protocol: TCP
 #            - port: "443"
 #              protocol: TCP
-            - port: "6379"
-              protocol: TCP
+#            - port: "6379"
+#              protocol: TCP
             - port: "5432"
               protocol: TCP
 #          rules:
@@ -28,14 +28,14 @@ spec:
   egress:
     - toPorts:
         - ports:
-            - port: "80"
-              protocol: TCP
-            - port: "9000"
-              protocol: TCP
+#            - port: "80"
+#              protocol: TCP
+#            - port: "9000"
+#              protocol: TCP
 #            - port: "443"
 #              protocol: TCP
-            - port: "6379"
-              protocol: TCP
+#            - port: "6379"
+#              protocol: TCP
             - port: "5432"
               protocol: TCP
 #          rules:
