--- a/infra/configs/kube-system/cilium/network-policy.yaml
+++ b/infra/configs/kube-system/cilium/network-policy.yaml
@@ -9,36 +9,8 @@ spec:
     matchLabels:
       app: authentik
   ingress:
-    - toPorts:
-        - ports:
-#            - port: "80"
-#              protocol: TCP
-#            - port: "9000"
-#              protocol: TCP
-#            - port: "443"
-#              protocol: TCP
-#            - port: "6379"
-#              protocol: TCP
-            - port: "5432"
-              protocol: TCP
-#          rules:
-#            http:
-#              - method: GET
-#              - method: POST
+    - fromEndpoints:
+      - {}
   egress:
-    - toPorts:
-        - ports:
-#            - port: "80"
-#              protocol: TCP
-#            - port: "9000"
-#              protocol: TCP
-#            - port: "443"
-#              protocol: TCP
-#            - port: "6379"
-#              protocol: TCP
-            - port: "5432"
-              protocol: TCP
-#          rules:
-#            http:
-#              - method: GET
-#              - method: POST
+    - toEndpoints:
+      - {}
