--- a/infra/configs/kube-system/cilium/network-policy.yaml
+++ b/infra/configs/kube-system/cilium/network-policy.yaml
@@ -7,7 +7,7 @@ spec:
   description: "Allow all traffic in both directions on all ports for both TCP and UDP"
   endpointSelector:
     matchLabels:
-      app: authentik
+      app: srauthentik
   ingress:
     - fromEndpoints:
       - {}
