--- a/infra/controllers/postgres/service.yaml
+++ b/infra/controllers/postgres/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres-service
+  name: postgres-external
   namespace: postgres
   labels:
     app: postgres
@@ -9,6 +9,20 @@ metadata:
     io.cilium/lb-ipam-ips: 192.168.1.205
 spec:
   type: LoadBalancer
+  ports:
+    - port: 5432
+      targetPort: 5432
+  selector:
+    app: postgres
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: postgres-service
+  namespace: postgres
+  labels:
+    app: postgres
+spec:
   ports:
     - port: 5432
       targetPort: 5432
