--- a/infra/configs/kube-system/cilium/network-policy.yaml
+++ b/infra/configs/kube-system/cilium/network-policy.yaml
@@ -16,6 +16,7 @@ spec:
         rules:
           http:
             - host: boomerok.dev
+            - host: authentik.boomerok.dev
   egress:
     - toPorts:
       - ports:
