--- a/infra/configs/kube-system/cilium/network-policy.yaml
+++ b/infra/configs/kube-system/cilium/network-policy.yaml
@@ -20,6 +20,9 @@ spec:
   egress:
     - toPorts:
       - ports:
+        - port: '443'
+          protocol: ANY
+      - ports:
         - port: '53'
           protocol: ANY
       - ports:
