--- a/infra/controllers/authentik/authentik-values.yaml
+++ b/infra/controllers/authentik/authentik-values.yaml
@@ -32,6 +32,7 @@ server:
     ingressClassName: traefik
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-prod
+      traefik.ingress.kubernetes.io/forwarded-headers: "true"
     hosts:
       - authentik.boomerok.dev
     tls:
