--- a/infra/configs/kube-system/cilium/network-policy.yaml
+++ b/infra/configs/kube-system/cilium/network-policy.yaml
@@ -7,7 +7,6 @@ spec:
   description: "Allow all traffic in both directions on all ports for both TCP and UDP"
   endpointSelector:
     matchLabels: {}
-#      app: authentik
   ingress:
     - toPorts:
       - ports:
@@ -31,22 +30,43 @@ spec:
       - ports:
         - port: '6379'
           protocol: TCP
-#    - toServices:
-#        - k8sService:
-#            serviceName: postgres-service
-#            namespace: postgres
-#---
-#apiVersion: cilium.io/v2
-#kind: CiliumNetworkPolicy
-#metadata:
-#  name: postgres-policy
-#  namespace: postgres
-#spec:
-#  endpointSelector:
-#    matchLabels: {}
-##      app: postgres
-#  ingress:
-#    - toPorts:
-#      - ports:
-#        - port: '5432'
-#          protocol: TCP
+---
+apiVersion: cilium.io/v2
+kind: CiliumNetworkPolicy
+metadata:
+  name: allow-all-traffic
+  namespace: traefik
+spec:
+  description: "Allow all traffic in both directions on all ports for both TCP and UDP"
+  endpointSelector:
+    matchLabels: {}
+  ingress:
+    - toPorts:
+        - ports:
+            - port: '80'
+              protocol: TCP
+        - ports:
+            - port: '443'
+              protocol: TCP
+        - ports:
+            - port: '9000'
+              protocol: TCP
+          rules:
+            http:
+              - host: boomerok.dev
+              - host: plex.boomerok.dev
+              - host: authentik.boomerok.dev
+  egress:
+    - toPorts:
+        - ports:
+            - port: '53'
+              protocol: ANY
+        - ports:
+            - port: '80'
+              protocol: ANY
+        - ports:
+            - port: '443'
+              protocol: ANY
+        - ports:
+            - port: '9000'
+              protocol: ANY
