--- a/infra/configs/kube-system/cilium/network-policy.yaml
+++ b/infra/configs/kube-system/cilium/network-policy.yaml
@@ -49,6 +49,9 @@ spec:
             - port: '443'
               protocol: TCP
         - ports:
+            - port: '8000'
+              protocol: TCP
+        - ports:
             - port: '9000'
               protocol: TCP
           rules:
@@ -66,6 +69,9 @@ spec:
               protocol: ANY
         - ports:
             - port: '443'
+              protocol: ANY
+        - ports:
+            - port: '8000'
               protocol: ANY
         - ports:
             - port: '9000'
