--- a/infra/controllers/traefik/traefik-values.yaml
+++ b/infra/controllers/traefik/traefik-values.yaml
@@ -22,8 +22,8 @@ providers:
     allowCrossNamespace: true
 
 additionalArguments:
-  additionalArguments:
-    - "--entryPoints.web.forwardedHeaders.insecure"
-    - "--entrypoints.websecure.forwardedHeaders.insecure"
-    - "--entryPoints.web.proxyProtocol.insecure"
-    - "--entryPoints.websecure.proxyProtocol.insecure"
+  - "--log.level=TRACE"
+  - "--entryPoints.web.forwardedHeaders.insecure"
+  - "--entrypoints.websecure.forwardedHeaders.insecure"
+  - "--entryPoints.web.proxyProtocol.insecure"
+  - "--entryPoints.websecure.proxyProtocol.insecure"
