update traefik config

--- a/infra/controllers/traefik/traefik-values.yaml
+++ b/infra/controllers/traefik/traefik-values.yaml
@@ -36,6 +36,7 @@ logs:
   access:
     enabled: true
     format: json
+    filePath: "/var/log/traefik/access.log"
     fields:
       headers:
         defaultmode: keep
