--- a/infra/controllers/observability/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack-values.yaml
@@ -19,6 +19,11 @@ grafana:
   persistence:
     enabled: true
     existingClaim: grafana-pvc
+  additionalDataSources:
+    - name: Loki
+      type: loki
+      access: proxy
+      url: http://grafana-loki.observability:3100/
 
 prometheus:
   prometheusSpec:
