--- a/infra/controllers/observability/volumes/pvc.yaml
+++ b/infra/controllers/observability/volumes/pvc.yaml
@@ -14,3 +14,20 @@ spec:
   selector:
     matchLabels:
       app: grafana
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: loki-pvc
+  namespace: observability
+  labels:
+    app: loki
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+  selector:
+    matchLabels:
+      app: loki
