--- a/infra/controllers/observability/grafana-loki-values.yaml
+++ b/infra/controllers/observability/grafana-loki-values.yaml
@@ -15,6 +15,8 @@ loki:
         schema: v13
 singleBinary:
   replicas: 1
+  persistence:
+    enabled: false
   extraVolumeMounts:
     - mountPath: /var/loki/chunks
       subPath: chunks
