--- a/infra/controllers/observability/release.yaml
+++ b/infra/controllers/observability/release.yaml
@@ -49,3 +49,26 @@ spec:
   valuesFrom:
     - kind: ConfigMap
       name: grafana-loki-values
+---
+apiVersion: helm.toolkit.fluxcd.io/v2
+kind: HelmRelease
+metadata:
+  name: grafana-promtail
+  namespace: observability
+spec:
+  interval: 30m
+  chart:
+    spec:
+      chart: promtail
+      version: 6.16.0
+      sourceRef:
+        kind: HelmRepository
+        name: grafana
+        namespace: observability
+  install:
+    remediation:
+      retries: 3
+  upgrade:
+    cleanupOnFail: true
+    remediation:
+      retries: 3
