--- a/infra/controllers/observability/release.yaml
+++ b/infra/controllers/observability/release.yaml
@@ -72,3 +72,6 @@ spec:
     cleanupOnFail: true
     remediation:
       retries: 3
+  valuesFrom:
+    - kind: ConfigMap
+      name: grafana-promtail-values
