--- a/infra/controllers/traefik/traefik-values.yaml
+++ b/infra/controllers/traefik/traefik-values.yaml
@@ -33,6 +33,8 @@ deployment:
         type: DirectoryOrCreate
 
 logs:
+  general:
+    format: json
   access:
     enabled: true
     format: json
