--- a/infra/configs/traefik/tls-option.yaml
+++ b/infra/configs/traefik/tls-option.yaml
@@ -1,8 +1,8 @@
 apiVersion: traefik.io/v1alpha1
 kind: TLSOption
 metadata:
-  name: sni-strict
-  namespace: traefik
+  name: default
+  namespace: default
 
 spec:
   sniStrict: true
