--- a/infra/controllers/traefik/traefik-values.yaml
+++ b/infra/controllers/traefik/traefik-values.yaml
@@ -33,6 +33,6 @@ logs:
 
 additionalArguments:
 #  - '--entryPoints.web.address=:8000'
-  - '--entryPoints.web.http.redirections.entryPoint.to=websecure'
-#  - '--entryPoints.web.http.redirections.entryPoint.scheme=https'
+  - '--entryPoints.web.http.redirections.entryPoint.to=:443'
+  - '--entryPoints.web.http.redirections.entryPoint.scheme=https'
 #  - '--entryPoints.websecure.address=:8443'
