--- a/infra/controllers/traefik/traefik-values.yaml
+++ b/infra/controllers/traefik/traefik-values.yaml
@@ -31,6 +31,7 @@ logs:
   access:
     enabled: true
     format: json
+    addInternals: true
     fields:
       headers:
         defaultmode: keep
