enable internals logging in traefik

--- a/infra/controllers/traefik/traefik-values.yaml
+++ b/infra/controllers/traefik/traefik-values.yaml
@@ -11,7 +11,7 @@ service:
 ports:
   web:
     redirectTo:
-#      port: websecure
+      port: websecure
       scheme: https
   traefik:
     expose:
