enable internals logging in traefik

--- a/infra/controllers/traefik/traefik-values.yaml
+++ b/infra/controllers/traefik/traefik-values.yaml
@@ -13,6 +13,9 @@ ports:
     redirectTo:
       port: websecure
       scheme: https
+  websecure:
+    redirectTo:
+      scheme: https
   traefik:
     expose:
       # Sensitive data should not be exposed on the internet
