add traefik image to helm values

--- a/infra/controllers/traefik/traefik-values.yaml
+++ b/infra/controllers/traefik/traefik-values.yaml
@@ -21,6 +21,7 @@ ports:
   websecure:
     redirectTo:
       scheme: https
+      port: websecure
   traefik:
     expose:
       # Sensitive data should not be exposed on the internet
