--- a/infra/controllers/traefik/traefik-values.yaml
+++ b/infra/controllers/traefik/traefik-values.yaml
@@ -49,8 +49,11 @@ providers:
     allowCrossNamespace: true
 
 logs:
+  general:
+    format: json
   access:
     enabled: true
+    format: json
     fields:
       headers:
         defaultmode: keep
