--- a/infra/controllers/observability/volumes/scratch.yaml
+++ b/infra/controllers/observability/volumes/scratch.yaml
@@ -23,12 +23,12 @@ spec:
           volumeMounts:
             - mountPath: /root
               name: root
-            - mountPath: /memvol
-              name: memvol
+#            - mountPath: /memvol
+#              name: memvol
       volumes:
         - name: root
           hostPath:
             path: /var/openebs/local/
-        - name: memvol
-          emptyDir:
-            medium: Memory
+#        - name: memvol
+#          emptyDir:
+#            medium: Memory
