--- a/infra/controllers/observability/grafana/kustomization.yaml
+++ b/infra/controllers/observability/grafana/kustomization.yaml
@@ -7,5 +7,5 @@ configMapGenerator:
       - traefik.json=traefik-dashboard.json
     options:
       labels:
-        grafana_dashboard: 1
+        grafana_dashboard: '1'
       disableNameSuffixHash: true
