--- a/infra/controllers/observability/cleanup-pods.yaml
+++ b/infra/controllers/observability/cleanup-pods.yaml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: cleanup-pods
-  namespace: observability
+  namespace: kube-system
 spec:
   schedule: "0 * * * *"  # Runs every hour
   jobTemplate:
