--- a/infra/controllers/observability/cleanup-pods.yaml
+++ b/infra/controllers/observability/cleanup-pods.yaml
@@ -19,3 +19,25 @@ spec:
                   kubectl delete pod --field-selector=status.phase==Succeeded --all-namespaces
                   kubectl delete pod --field-selector=status.phase==Failed --all-namespaces
           restartPolicy: OnFailure
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: pod-cleanup-role
+rules:
+  - apiGroups: [""]
+    resources: ["pods"]
+    verbs: ["list", "delete"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: pod-cleanup-binding
+subjects:
+  - kind: ServiceAccount
+    name: default
+    namespace: kube-system
+roleRef:
+  kind: ClusterRole
+  name: pod-cleanup-role
+  apiGroup: rbac.authorization.k8s.io
