fix kube-prometheus-stack kustomization

--- a/infra/controllers/observability/kube-prometheus-stack/kustomization.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kustomization.yaml
@@ -3,7 +3,10 @@ kind: Kustomization
 resources:
   - repository.yaml
   - release.yaml
-  - volumes
+  - volumes/alertmanager-pv.yaml
+  - volumes/grafana-pv.yaml
+  - volumes/grafana-pvc.yaml
+  - volumes/prometheus-pv.yaml
 configMapGenerator:
   - name: kube-prometheus-stack-values
     namespace: observability
