--- a/apps/kustomization.yaml
+++ b/apps/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - network
-  - observability
-  - storage
+  - authentik
+  - arr
+  - storage/scratch.yaml
