--- a/apps/arr/qbittorrent/kustomization.yaml
+++ b/apps/arr/qbittorrent/kustomization.yaml
@@ -1,5 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - deployment.yaml
-  - service.yaml
+  - repository.yaml
+  - release.yaml
+configMapGenerator:
+  - name: qbittorrent-values
+    namespace: arr
+    files:
+      - values.yaml=qbittorrent-values.yaml
+configurations:
+  - kustomizeconfig.yaml
