--- a/infra/controllers/network/external-dns/external-dns-values.yaml
+++ b/infra/controllers/network/external-dns/external-dns-values.yaml
@@ -4,7 +4,7 @@ env:
   - name: CF_API_TOKEN
     valueFrom:
       secretKeyRef:
-        name: cloudflare-api-key
-        key: apiKey
+        name: cloudflare-token
+        key: CLOUDFLARE_TOKEN
   - name: EXTERNAL_DNS_DRY_RUN
     value: 1
