--- a/infra/controllers/network/external-dns/kustomization.yaml
+++ b/infra/controllers/network/external-dns/kustomization.yaml
@@ -9,3 +9,8 @@ secretGenerator:
       - cloudflare-token.env
     options:
       disableNameSuffixHash: true
+configMapGenerator:
+  - name: external-dns-cloudflare-values
+    namespace: external-dns
+    envs:
+      - cloudflare-values.yaml
