--- a/infra/controllers/network/external-dns/kustomization.yaml
+++ b/infra/controllers/network/external-dns/kustomization.yaml
@@ -2,6 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
+  - repository.yaml
+  - release-cloudflare.yaml
 secretGenerator:
   - name: cloudflare-token
     namespace: external-dns
