add external dns + unifi configure cert-manager for local certs through DNS01 challenge add reflector to copy local wildcard certificate

--- a/infra/configs/cert-manager/letsencrypt-prod.yaml
+++ b/infra/configs/cert-manager/letsencrypt-prod.yaml
@@ -13,3 +13,14 @@ spec:
       - http01:
           ingress:
             class: traefik
+        selector:
+          dnsZones:
+            - boomerok.dev
+      - dns01:
+          cloudflare:
+            apiTokenSecretRef:
+              name: cloudflare-token
+              key: apiToken
+        selector:
+          dnsZones:
+            - local.boomerok.dev
